Add workgroups and members spec
